--- a/LoginRegisterPage/LoginRegisterPage.html
+++ b/LoginRegisterPage/LoginRegisterPage.html
@@ -11,7 +11,7 @@
 	<body>
 		<div class="main-content">
 			<div class="title">
-				<img class="logo hide-text" src="images/logo.png" alt="知乎">
+				<img src="images/logo.png" alt="知乎">
 				<h2 class="subtitle">与世界分享你的知识、经验和见解</h2>
 			</div>
 			<div class="content sign-flow">
@@ -27,7 +27,7 @@
 							<div class="input-wrapper">
 								<input type="text" name="username" placeholder="姓名">
 								<label class="error is-visible" name="usernameerror"/>
-							</div
+							</div>
 							<div class="input-wrapper">
 								<input type="text" name="phonenumber" placeholder="手机号（仅支持中国大陆）">
 								<label class="error is-visible" name="phonenumbererror"/>
@@ -77,6 +77,6 @@
 		<div class="footer">
 		© 2016 知乎 · 知乎圆桌 · 发现 · 移动应用 · 使用机构帐号登录 · 联系我们· 刘看山 · 来知乎工作 · 京 ICP 备 13052560 号 · 京公网安备 11010802010035 号 · 北京智者天下科技有限公司
 		</div>
-		<script type="text/javascript" src="javascript/LoginRegisterPage.js">
+		<script type="text/javascript" src="javascript/LoginRegisterPage.js"></script>
 	</body>
 </html>
